[package]
name = "cutline-rust"
version = "0.1.0"
edition = "2021"
authors = ["Yiming Zhang <zhangyiming21@mail.ustc.edu.cn>"]
description = "Search for the optimal cutline of SFA algorithm with different gate patterns."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
derive_builder = "0.12.0"
indexmap = "2.0.0"
itertools = "0.11.0"
petgraph = "0.6.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
smallvec = "1.11.0"

[dev-dependencies]
tempfile = "3.6.0"
